--- a/src/django_govbrds/templates/django_govbrds/govbrds.html
+++ b/src/django_govbrds/templates/django_govbrds/govbrds.html
@@ -1,4 +1,5 @@
-{% load django_govbrds }
+<!DOCTYPE html>
+{% load django_govbrds %}
 {% load i18n %}
 {% get_current_language as LANGUAGE_CODE %}
 <html lang="{{ LANGUAGE_CODE|default:'pt_br' }}">
