--- a/src/django_govbrds/templates/django_govbrds/govbrds.html
+++ b/src/django_govbrds/templates/django_govbrds/govbrds.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 {% load django_govbrds %}
 {% load i18n %}
+{% load static %}
 {% get_current_language as LANGUAGE_CODE %}
 <html lang="{{ LANGUAGE_CODE|default:'pt_br' }}">
 <head>
@@ -10,9 +11,8 @@
     <!-- Page title -->
     <title>{% block govbrds_title %}django-govbrds template title{% endblock %}</title>
     <!-- GovBR-DS CSS -->
-    {% govbrds_css %}
-    <!-- GovBR-DS JavaScript if it is in head -->
-    {% if GOVBRDS_JAVASCRIPT_IN_HEAD %}{% govbrds_javascript %}{% endif %}
+    <link rel="stylesheet" href="{% static '/govbrds3/css/style.min.js' %}">
+    
 
   {% block govbrds_extra_head %}{% endblock %}
 </head>
@@ -20,8 +20,5 @@
     {% block govbrds_before_content %}{% endblock %}
     {% block govbrds_content %} CONTENT {% endblock %}
     {% block govbrds_after_content %}{% endblock %}
-    <!-- GovBR-DS JavaScript if it is in body -->
-    {% if not GOVBRDS_JAVASCRIPT_IN_HEAD %}{% govbrds_javascript %}{% endif %}
-    
 </body>
 </html>
