fix file extension

--- a/src/django_govbrds/templates/django_govbrds/govbrds.html
+++ b/src/django_govbrds/templates/django_govbrds/govbrds.html
@@ -11,7 +11,7 @@
     <!-- Page title -->
     <title>{% block govbrds_title %}django-govbrds template title{% endblock %}</title>
     <!-- GovBR-DS CSS -->
-    <link rel="stylesheet" href="{% static '/govbrds3/css/style.min.js' %}">
+    <link rel="stylesheet" href="{% static '/govbrds3/css/style.min.css' %}">
     
 
   {% block govbrds_extra_head %}{% endblock %}
