--- a/src/django_govbrds/templates/django_govbrds/base.html
+++ b/src/django_govbrds/templates/django_govbrds/base.html
@@ -3,7 +3,7 @@
 {% load django_govbrds %}
 
 {% block govbrds_content %}
-    <div class="container">
+    <div class="container-fluid">
         {% block content %}(no content){% endblock %}
     </div>
 
